logs/phi/1524614/few_inven_new.err
  File "/home/hpc/iwi5/iwi5298h/Uddipan-Thesis/phivision/shots/few_inven_new.py", line 197
    print(f"{'='*80}"))
                      ^
SyntaxError: unmatched ')'
